WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35169
[Gtk] Webkit crashes when using orca
https://bugs.webkit.org/show_bug.cgi?id=35169
Summary
[Gtk] Webkit crashes when using orca
José Millán Soto
Reported
2010-02-19 12:08:08 PST
As commented in
https://bugs.webkit.org/show_bug.cgi?id=34463#c5
, webkit_accessible_text_get_caret_offset crashes when Orca is open. To reproduce enter in any webpage and press tab until WebKit crashes.
Attachments
Check if end selection node is null
(1.80 KB, patch)
2010-02-19 12:17 PST
,
José Millán Soto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
José Millán Soto
Comment 1
2010-02-19 12:17:29 PST
Created
attachment 49099
[details]
Check if end selection node is null This patch makes webkit_accessible_text_get_caret_offset check if end selection node is null, avoiding crashing.
Eric Seidel (no email)
Comment 2
2010-02-22 14:18:02 PST
Comment on
attachment 49099
[details]
Check if end selection node is null I think this makes sense.
WebKit Commit Bot
Comment 3
2010-02-23 00:09:59 PST
Comment on
attachment 49099
[details]
Check if end selection node is null Clearing flags on attachment: 49099 Committed
r55124
: <
http://trac.webkit.org/changeset/55124
>
WebKit Commit Bot
Comment 4
2010-02-23 00:10:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug