2010-02-23  José Millán Soto  <jmillan@igalia.com>

Reviewed by Eric Seidel.

        [Gtk] Webkit crashes when using orca
        https://bugs.webkit.org/show_bug.cgi?id=35169

        Made webkit_accessible_text_get_caret_offset check if end selection
        node is null.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_text_get_caret_offset):

Canonical link: https://commits.webkit.org/46426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55124 268f45cc-cd09-0410-ab3c-d52691b4dbfc